<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>22</version>
    </parent>
    <groupId>io.quarkiverse.wiremock</groupId>
    <artifactId>quarkus-wiremock-parent</artifactId>
    <version>999-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>WireMock - Parent</name>
    <modules>
        <module>deployment</module>
        <module>runtime</module>
        <module>test</module>
    </modules>
    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-wiremock.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-wiremock.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-wiremock</url>
      <tag>HEAD</tag>
  </scm>
    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.version>3.33.3.1</quarkus.version>
        <wiremock.version>3.13.2</wiremock.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-standalone</artifactId>
                <version>${wiremock.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-config-doc-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
                <module>integration-tests</module>
            </modules>
        </profile>
    </profiles>
</project>
